# cpp-docker-isolation-provider

./: .dockerignore  .gitignore  CMakeLists.txt  DeepClientCppWrapper.cpp  DeepClientCppWrapper.h  Dockerfile  PyCppBridge.cpp  PyCppBridge.h  README.md  compiler.cpp  compiler.h  cpp-docker-isolation-provider  deep_client_interface.py  docker-isolation-provider.cpp  requirements.txt
.github/workflows/: dockerize.yaml
